--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "test": "jest --verbose",
     "build": "webpack --config ./webpack.config.js --watch",
-    "start": "npm run build && electron dist/electron.js",
-    "cheese": "electron dist/electron.js"
+    "start": "electron src/electron.js"
   },
   "repository": {
     "type": "git",
@@ -24,6 +23,7 @@
     "@babel/preset-react": "^7.22.15",
     "babel-loader": "^9.1.3",
     "electron": "^27.0.3",
+    "electron-reloader": "^1.2.3",
     "html-webpack-plugin": "^5.5.3",
     "jest": "^29.7.0",
     "webpack": "^5.89.0",
