--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "jest --verbose",
     "build": "webpack --config ./webpack.config.js --watch",
-    "start": "npm run build & electron main/electron.js && fg"
+    "start": "concurrently \"npm run build\" \"electron main/electron.js\" --kill-others"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,7 @@
     "@babel/preset-env": "^7.23.2",
     "@babel/preset-react": "^7.22.15",
     "babel-loader": "^9.1.3",
+    "concurrently": "^8.2.2",
     "electron": "^27.0.3",
     "electron-reloader": "^1.2.3",
     "html-webpack-plugin": "^5.5.3",
