--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "@babel/preset-react": "^7.22.15",
     "babel-loader": "^9.1.3",
     "concurrently": "^8.2.2",
+    "css-loader": "^6.8.1",
     "electron": "^27.0.3",
     "electron-reloader": "^1.2.3",
     "html-webpack-plugin": "^5.5.3",
     "jest": "^29.7.0",
+    "sass-loader": "^13.3.2",
+    "style-loader": "^3.3.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
   },
