--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "css-loader": "^6.8.1",
     "electron": "^27.0.3",
     "electron-reloader": "^1.2.3",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.3",
     "jest": "^29.7.0",
     "sass-loader": "^13.3.2",
