--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jest": "^29.7.0",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
+    "url-loader": "^4.1.1",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
   },
