--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
+    "kafkajs": "^2.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
