--- a/docker-test/prometheus.yml
+++ b/docker-test/prometheus.yml
@@ -5,4 +5,5 @@ global:
 scrape_configs:
   - job_name: 'kafka'
     static_configs:
-      - targets: ['kafka-exporter:9308']
+      - targets:
+          ['kafka-broker-1:9999', 'kafka-broker-2:9999', 'kafka-broker-3:9999']
