--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "html-webpack-plugin": "^5.5.3",
     "jest": "^29.7.0",
     "nodemon": "^3.0.1",
+    "react-router": "^6.18.0",
+    "react-router-dom": "^6.18.0",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
     "url-loader": "^4.1.1",
