--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "dockerode": "^4.0.0",
     "express": "^4.18.2",
     "kafkajs": "^2.2.4",
     "react": "^18.2.0",
