Added config to docker-compose and created grafana files

--- a/docker-test/docker-compose.yml
+++ b/docker-test/docker-compose.yml
@@ -88,12 +88,18 @@ services:
       - prometheus
     volumes:
       - grafana-storage:/var/lib/grafana
+      - ../grafana/Dockerfile/provisioning/dashboards:/etc/grafana/provisioning/dashboards
+      - ../grafana/Dockerfile/provisioning/datasources:/etc/grafana/provisioning/datasources
+      - ../grafana/grafana.ini:/etc/grafana/grafana.ini
     environment:
       GF_SECURITY_ADMIN_USER: 'admin'
       GF_SECURITY_ADMIN_PASSWORD: 'admin'
       GF_USERS_ALLOW_SIGN_UP: 'false'
       GF_SECURITY_ALLOW_EMBEDDING: 'true'
       GF_AUTH_ANONYMOUS_ENABLED: 'true'
+   
+
+
 
 
     
