--- a/grafana/Dockerfile/provisioning/datasources/datasource.yml
+++ b/grafana/Dockerfile/provisioning/datasources/datasource.yml
@@ -5,8 +5,8 @@ datasources:
   - name: Prometheus
     type: prometheus
     access: proxy
-    orgId: 1
-    url: http://prometheus:9090
-    basicAuth: false
+    # orgId: 1
+    url: http://localhost:9090
+    # basicAuth: false
     isDefault: true
     editable: true
