--- a/grafana/grafana.ini
+++ b/grafana/grafana.ini
@@ -1,5 +1,5 @@
-[server]
-allow_embedding = true
+; [server]
+; allow_embedding = true
 [security]
 allow_embedding = true
 # Lets people view the grafana dashboard without needing any authentication
