--- a/grafana/grafana.ini
+++ b/grafana/grafana.ini
@@ -2,6 +2,8 @@
 allow_embedding = true
 [security]
 allow_embedding = true
+[plugins]
+plugins= grafana-clock-panel
 # Lets people view the grafana dashboard without needing any authentication
 [auth.anonymous]
 enabled = true
