set up dynamic generation of docker container instances of prometheus and grafana utilizing the JMX endpoints given by user. Created routes in express server to handle user input of JMX endpoints.

--- a/main/controllers/prometheus.yml
+++ b/main/controllers/prometheus.yml
@@ -2,6 +2,6 @@ global:
   scrape_interval: 15s
 
 scrape_configs:
-  - job_name: 'jmx-exporter'
+  - job_name: 'kafka'
     static_configs:
-      - targets: ['<JMX_EXPORTER_ENDPOINT>']
+      - targets: ['<KAFKA_JMX_ENDPOINTS>']
