--- a/main/controllers/prometheus.yml
+++ b/main/controllers/prometheus.yml
@@ -4,4 +4,4 @@ global:
 scrape_configs:
   - job_name: 'kafka'
     static_configs:
-      - targets: ['<KAFKA_JMX_ENDPOINTS>']
+     - targets: ['kafka-broker-1:19092']
