start configuring for email alerts

--- a/docker-test/docker-compose.yml
+++ b/docker-test/docker-compose.yml
@@ -86,7 +86,8 @@ services:
       - '3000:3000'
     depends_on:
       prometheus:
-        condition: service_started 
+        condition: service_started
+        
       
        
     volumes:
@@ -101,11 +102,9 @@ services:
       GF_SECURITY_ALLOW_EMBEDDING: 'true'
       GF_AUTH_ANONYMOUS_ENABLED: 'true'
       GF_INSTALL_PLUGINS: grafana-clock-panel
+      GRAFANA_EMAIL_USERNAME: ${GRAFANA_EMAIL_USERNAME}
+      GRAFANA_EMAIL_PASSWORD: ${GRAFANA_EMAIL_PASSWORD}
    
-
-
-
-
     
   prometheus:
     image: prom/prometheus:latest
