--- a/grafana/grafana.ini
+++ b/grafana/grafana.ini
@@ -9,3 +9,10 @@ plugins= grafana-clock-panel
 enabled = true
 org_name = Main Org.
 org_role = Admin
+[smtp]
+enabled = true
+host = smtp.gmail.com:465
+user = ${GRAFANA_EMAIL_USERNAME}
+# If the password contains # or ; you have to wrap it with triple quotes.
+password = ${GRAFANA_EMAIL_PASSWORD}
+from_address = ${GRAFANA_EMAIL_USERNAME}
