--- a/docker-test/docker-compose.yml
+++ b/docker-test/docker-compose.yml
@@ -86,9 +86,9 @@ services:
       - '3000:3000'
     depends_on:
       prometheus:
-        condition: service_started 
-      
-       
+        condition: service_started
+        
+          
     volumes:
       - grafana-storage:/var/lib/grafana
       - ../grafana/Dockerfile/provisioning/dashboards:/etc/grafana/provisioning/dashboards
@@ -100,7 +100,11 @@ services:
       GF_USERS_ALLOW_SIGN_UP: 'false'
       GF_SECURITY_ALLOW_EMBEDDING: 'true'
       GF_AUTH_ANONYMOUS_ENABLED: 'true'
-
+      GF_INSTALL_PLUGINS: grafana-clock-panel
+      GRAFANA_EMAIL_USERNAME: ${GRAFANA_EMAIL_USERNAME}
+      GRAFANA_EMAIL_PASSWORD: ${GRAFANA_EMAIL_PASSWORD}
+   
+    
   prometheus:
     image: prom/prometheus:latest
     volumes:
