--- a/docker-test/docker-compose.yml
+++ b/docker-test/docker-compose.yml
@@ -100,7 +100,9 @@ services:
       GF_USERS_ALLOW_SIGN_UP: 'false'
       GF_SECURITY_ALLOW_EMBEDDING: 'true'
       GF_AUTH_ANONYMOUS_ENABLED: 'true'
-   
+      GF_INSTALL_PLUGINS: grafana-clock-panel
+      GRAFANA_EMAIL_USERNAME: ${GRAFANA_EMAIL_USERNAME}
+      GRAFANA_EMAIL_PASSWORD: ${GRAFANA_EMAIL_PASSWORD}
 
 
 
