--- a/grafana/Dockerfile/provisioning/datasources/datasource.yml
+++ b/grafana/Dockerfile/provisioning/datasources/datasource.yml
@@ -6,7 +6,7 @@ datasources:
     type: prometheus
     access: proxy
     orgId: 1
-    url: http://localhost:9090
+    url: http://prometheus:9090
     basicAuth: false
     isDefault: true
     editable: true
