Work on user dashboard

--- a/docker-test/docker-compose.yml
+++ b/docker-test/docker-compose.yml
@@ -101,8 +101,8 @@ services:
       GF_SECURITY_ALLOW_EMBEDDING: 'true'
       GF_AUTH_ANONYMOUS_ENABLED: 'true'
       GF_INSTALL_PLUGINS: grafana-clock-panel
-      GRAFANA_EMAIL_USERNAME: ${GRAFANA_EMAIL_USERNAME}
-      GRAFANA_EMAIL_PASSWORD: ${GRAFANA_EMAIL_PASSWORD}
+      # GRAFANA_EMAIL_USERNAME: ${GRAFANA_EMAIL_USERNAME}
+      # GRAFANA_EMAIL_PASSWORD: ${GRAFANA_EMAIL_PASSWORD}
 
 
 
