--- a/local-test/kafka-config/server1.properties
+++ b/local-test/kafka-config/server1.properties
@@ -31,7 +31,8 @@ broker.id=0
 #     listeners = listener_name://host_name:port
 #   EXAMPLE:
 #     listeners = PLAINTEXT://your.host.name:9092
-listeners=SASL_PLAINTEXT://:9092
+listeners=PLAINTEXT://:9092
+# listeners=SASL_PLAINTEXT://:9092
 
 # Listener name, hostname and port the broker will advertise to clients.
 # If not set, it uses the value for "listeners".
