--- a/local-test/kafka-config/server1.properties
+++ b/local-test/kafka-config/server1.properties
@@ -36,8 +36,8 @@ listeners=PLAINTEXT://:9092
 
 # Listener name, hostname and port the broker will advertise to clients.
 # If not set, it uses the value for "listeners".
-advertised.listeners=PLAINTEXT://your.host.name:9092
-# advertised.listeners=SASL_PLAINTEXT://:9092
+#advertised.listeners=PLAINTEXT://your.host.name:9092
+#advertised.listeners=SASL_PLAINTEXT://:9092
 
 # Maps listener names to security protocols, the default is for them to be the same. See the config documentation for more details
 #listener.security.protocol.map=PLAINTEXT:PLAINTEXT,SSL:SSL,SASL_PLAINTEXT:SASL_PLAINTEXT,SASL_SSL:SASL_SSL
