--- a/local-test/kafka-config/server1.properties
+++ b/local-test/kafka-config/server1.properties
@@ -40,13 +40,13 @@ advertised.listeners=SASL_PLAINTEXT://:9092
 
 # Maps listener names to security protocols, the default is for them to be the same. See the config documentation for more details
 #listener.security.protocol.map=PLAINTEXT:PLAINTEXT,SSL:SSL,SASL_PLAINTEXT:SASL_PLAINTEXT,SASL_SSL:SASL_SSL
-security.inter.broker.protocol=SASL_PLAINTEXT
-sasl.mechanism.inter.broker.protocol=PLAIN
-sasl.enable.mechanisms=PLAIN
+# security.inter.broker.protocol=SASL_PLAINTEXT
+# sasl.mechanism.inter.broker.protocol=PLAIN
+# sasl.enable.mechanisms=PLAIN
 
 #normally in separate JAAS file but for simplicity, config listed below
 #must be single line in server.properties file, as below
-sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required username="kafka" password="kafkapassword" user_kafka="kafka"
+# sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required username="kafka" password="kafkapassword" user_kafka="kafka"
 
 
 # The number of threads that the server uses for receiving requests from the network and sending responses to the network
