--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   "dependencies": {
     "axios": "^1.6.2",
     "dockerode": "^4.0.0",
+    "electron-builder": "^24.9.1",
     "express": "^4.18.2",
     "kafkajs": "^2.2.4",
     "react": "^18.2.0",
