--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
   "dependencies": {
     "axios": "^1.6.2",
     "dockerode": "^4.0.0",
+    "electron-log": "^5.0.1",
     "express": "^4.18.2",
     "ini": "^4.1.1",
     "kafkajs": "^2.2.4",
