added comments to front end code

--- a/grafana/grafana.ini
+++ b/grafana/grafana.ini
@@ -1,6 +1,7 @@
+#configures grafana settings and grafana.ini
 [security]
 allow_embedding=true
-
+#allows user to see grafana clok panel
 [plugins]
 plugins=grafana-clock-panel
 
