--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "exportJmx": "java -jar local-test/jmx_prometheus_httpserver-0.19.0.jar 3030 ./local-test/scraping-config/jmxconfig.yml",
     "prometheus": "prometheus --config.file=./local-test/scraping-config/prometheus.yml",
     "electron-pack": "electron-builder build",
-    "dist": "electron-builder -ml"
+    "dist": "electron-builder -m"
   },
   "repository": {
     "type": "git",
@@ -114,6 +114,7 @@
     "dockerode": "^4.0.0",
     "electron-log": "^5.0.1",
     "express": "^4.18.2",
+    "fs-extra": "^11.2.0",
     "ini": "^4.1.1",
     "kafkajs": "^2.2.4",
     "react": "^18.2.0",
