working app icon for kafopticon

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
       "target": [
         "dmg",
         "zip"
-      ]
+      ],
+      "icon": "./assets/appIcon.icns"
     },
     "files": [
       "**/*",
